--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Welcome!! Nice to meet you!!peko~~
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: @songsong0w0
+twitter_username: songsong0w0
 github_username:  HsuYuSung
 
 # Build settings
